// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@coveo/create-atomic-result-component when called in an existing project should initialize a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "/EUyu6gVZlO8FrKPYi4T6pPEZOI=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "t2ijBtfSMeYJbqfftNaaKO/djIo=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "/5yLi44o1uyQViLBqN4GTX4Wifo=",
                      "name": "cdn.js",
                    },
                    HashedFile {
                      "hash": "/5yLi44o1uyQViLBqN4GTX4Wifo=",
                      "name": "index.cjs.js",
                    },
                    HashedFile {
                      "hash": "EejgXD4itDHQkcSB+rkduaK6i3w=",
                      "name": "index.d.ts",
                    },
                    HashedFile {
                      "hash": "AVg2xEIhlYFa1JdLuHECP4RcRwg=",
                      "name": "index.es2017.js",
                    },
                    HashedFile {
                      "hash": "orpFM4J34T2gX7c3vGiovp0rdxM=",
                      "name": "index.js",
                    },
                    HashedFile {
                      "hash": "WNqwx6y7/TKh0xE/ENZlA00Dy/g=",
                      "name": "package.json",
                    },
                  ],
                  "hash": "sKeQkO8VgbsjZXr6tkSU30MvP5c=",
                  "name": "loader",
                },
                HashedFile {
                  "hash": "J/9i/cUUHiIjZkELiezQuwfCjzQ=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "2evDFbkt/cgRlemoW1E66Nz3gwU=",
                      "name": "components.d.ts",
                    },
                    HashedFile {
                      "hash": "0kZk+nhPZP6DNXEt1ds/y13pPn4=",
                      "name": "oh-wow-another-component-can-you-believe-it.css",
                    },
                    HashedFile {
                      "hash": "I+1b5N1kyPbt/73pkZi5tRoAt68=",
                      "name": "oh-wow-another-component-can-you-believe-it.tsx",
                    },
                    HashedFile {
                      "hash": "xP4FebG8AhkGm5G5892sV4YgrI4=",
                      "name": "readme.md",
                    },
                  ],
                  "hash": "4UIiWSYxKT2VTWmAK9c/rIz67Ic=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "o/wjp7ceO6Frr8oWEWwMMbpgj60=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "kuYss4yDAHIyeg9EjjjmhAc9/e8=",
              "name": "oh-wow-another-component-can-you-believe-it",
            },
          ],
          "hash": "1pKu8vC6aVTatG3P4VGHeawEseg=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "wRrWASx36kB/WHP3xotlHQbcLdo=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "PzWUKvDClNOd5HSK8c6YTFV8/9Q=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "ZRD3OAMjlKnlu7Yh3iQv3gCcG8c=",
              "name": "index.ts",
            },
          ],
          "hash": "KaLKYWk10KFfD5NR/eQK0Zlk4qc=",
          "name": "pages",
        },
      ],
      "hash": "4vXr0OT6ckyOiGJED/LdfHXl45o=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "/CCrjODvGK5daM8GTHbdVrodGsE=",
  "name": "no-args",
}
`;

exports[`@coveo/create-atomic-result-component when called with a component name without hyphen should initialize a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "/EUyu6gVZlO8FrKPYi4T6pPEZOI=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "t2ijBtfSMeYJbqfftNaaKO/djIo=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "5JDvrBz7qayZLUtK8szNGbBvPQk=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "0kZk+nhPZP6DNXEt1ds/y13pPn4=",
                      "name": "atomic-nohypen.css",
                    },
                    HashedFile {
                      "hash": "DHc1UOzcvrRyRP7cNfkhee0USQE=",
                      "name": "atomic-nohypen.tsx",
                    },
                  ],
                  "hash": "bBaaDceapg0y5AjIvm6Qiia9piQ=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "o/wjp7ceO6Frr8oWEWwMMbpgj60=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "aGSZ79grLIRwg3+4BetJLifFI3g=",
              "name": "atomic-nohypen",
            },
          ],
          "hash": "Vb1ezYZoOWNqtgen0t64icYsS5Y=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "wRrWASx36kB/WHP3xotlHQbcLdo=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "PzWUKvDClNOd5HSK8c6YTFV8/9Q=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "ZRD3OAMjlKnlu7Yh3iQv3gCcG8c=",
              "name": "index.ts",
            },
          ],
          "hash": "KaLKYWk10KFfD5NR/eQK0Zlk4qc=",
          "name": "pages",
        },
      ],
      "hash": "1KBPX4UNfie5rf2+IgxUlIJ04fQ=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "CxN9B6Kwz9/tclti7gNQcK2ys6o=",
  "name": "invalid-arg",
}
`;

exports[`@coveo/create-atomic-result-component when called with a valid component name should initialize a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "/EUyu6gVZlO8FrKPYi4T6pPEZOI=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "t2ijBtfSMeYJbqfftNaaKO/djIo=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "AqzULIsb31lfG6Uhsk71hOqHKdw=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "0kZk+nhPZP6DNXEt1ds/y13pPn4=",
                      "name": "valid-component-name.css",
                    },
                    HashedFile {
                      "hash": "ShFXwot8XbCjD/A7x/1LQ0+hYI4=",
                      "name": "valid-component-name.tsx",
                    },
                  ],
                  "hash": "pFuu6S9wb+y09faE9Lxub6t+cfY=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "o/wjp7ceO6Frr8oWEWwMMbpgj60=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "kkKKivgaRPN9UmQIiAev/6yMvB0=",
              "name": "valid-component-name",
            },
          ],
          "hash": "deeC6Go8U+DLYez806q7ZgytB1E=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "wRrWASx36kB/WHP3xotlHQbcLdo=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "PzWUKvDClNOd5HSK8c6YTFV8/9Q=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "ZRD3OAMjlKnlu7Yh3iQv3gCcG8c=",
              "name": "index.ts",
            },
          ],
          "hash": "KaLKYWk10KFfD5NR/eQK0Zlk4qc=",
          "name": "pages",
        },
      ],
      "hash": "tWUjzqP/Jqk5wAAYz17c10CLaA4=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "Hl0Wxw/dXCaNMCMgDHNFA/se3eQ=",
  "name": "valid-arg",
}
`;

exports[`@coveo/create-atomic-result-component when called without any args should initialize a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "/EUyu6gVZlO8FrKPYi4T6pPEZOI=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "t2ijBtfSMeYJbqfftNaaKO/djIo=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "t5q4ZFpvqJwFl5/hZY9N0iwV6i4=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "0kZk+nhPZP6DNXEt1ds/y13pPn4=",
                      "name": "sample-result-component.css",
                    },
                    HashedFile {
                      "hash": "DMYROzP/GYB/aoia+R5JUflx37w=",
                      "name": "sample-result-component.tsx",
                    },
                  ],
                  "hash": "zQmeniXwoag2rYtOWGtLO1oiwlQ=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "o/wjp7ceO6Frr8oWEWwMMbpgj60=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "GyTjZrSra4Mkbdmsd7/m7KmiT6w=",
              "name": "sample-result-component",
            },
          ],
          "hash": "9tpeYqSzmuSKVkTQ8J/ab5CLv4I=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "wRrWASx36kB/WHP3xotlHQbcLdo=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "PzWUKvDClNOd5HSK8c6YTFV8/9Q=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "ZRD3OAMjlKnlu7Yh3iQv3gCcG8c=",
              "name": "index.ts",
            },
          ],
          "hash": "KaLKYWk10KFfD5NR/eQK0Zlk4qc=",
          "name": "pages",
        },
      ],
      "hash": "ZwqmTEndhPkQMizsRWVb2Q2pOZ0=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "WdX6njf3kOHYn1OSeGrGoETKcSg=",
  "name": "no-args",
}
`;
